--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
       <app-left-navbar></app-left-navbar>
     </div>
     <div id="main-content" class="col-md-11">
-      <!-- <app-top-navbar></app-top-navbar>
-      <app-main-content></app-main-content> -->
+      <app-top-navbar></app-top-navbar>
+      <!-- <app-main-content></app-main-content> -->
     </div>
   </div>
 </div>
