--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     </div>
     <div id="main-content" class="col-md-11">
       <app-top-navbar></app-top-navbar>
-      <!-- <app-main-content></app-main-content> -->
+      <app-dashboard-contents></app-dashboard-contents>
     </div>
   </div>
 </div>
