--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="container-fluid">
+<div class="container">
   <div class="row">
-    <div class="col-md-1">
+    <div class="col">
       <app-left-navbar></app-left-navbar>
     </div>
-    <div id="main-content" class="col-md-11">
+    <div id="main-content" class="col-md-12 spacing">
       <app-top-navbar></app-top-navbar>
       <app-dashboard-contents></app-dashboard-contents>
     </div>
