--- a/src/app/components/dashboard-contents/dashboard-contents.component.html
+++ b/src/app/components/dashboard-contents/dashboard-contents.component.html
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="row bg">
     <div class="col-md-12">
         <app-top-cards></app-top-cards>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8 ">
         <app-recent-orders></app-recent-orders>
     </div>
     <div class="col-md-4">
