--- a/src/app/components/dashboard-contents/new-users/new-users.component.html
+++ b/src/app/components/dashboard-contents/new-users/new-users.component.html
@@ -1,5 +1,6 @@
 <div id="new-users">
-    <div class="row">
+    
+    <div class="row card">
         <div class="col-md-12">
             <h1 class="fs-20">
                 New User Registrations
