--- a/src/app/components/dashboard-contents/top-cards/top-cards.component.html
+++ b/src/app/components/dashboard-contents/top-cards/top-cards.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-3"  
             *ngFor="let card of topCardData; index as i">
-            <div [ngClass]="i === 0 ? 'active' : 'not-active'" class="p-3">
+            <div [ngClass]="i === 0 ? 'active' : 'not-active'" class="p-3 card">
                 <div id="value-wrapper" class="d-flex justify-content-between">
                     <span id="value">
                         {{card.value}} % 
