--- a/src/app/components/top-navbar/top-navbar.component.html
+++ b/src/app/components/top-navbar/top-navbar.component.html
@@ -1,4 +1,4 @@
-<nav id="top-navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav id="top-navbar" class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
